--- a/frontend/.env
+++ b/frontend/.env
@@ -5,4 +5,4 @@ VITE_FIREBASE_PROJECT_ID=auth-4f322
 VITE_FIREBASE_STORAGE_BUCKET=auth-4f322.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=599689211673
 VITE_FIREBASE_APP_ID=1:599689211673:web:7247b5b7aff0682b6e9f88
-VITE_BASE_URL=http://localhost:5173
+VITE_BASE_URL=https://notes-app-qrpz.onrender.com
